<resources>
    <string name="app_name">SensorDataCollector</string>
    <!-- Main Activity -->
    <string name="status">Status</string>
    <string name="start_tracking">Start tracking</string>
    <string name="calibrate">Calibrate</string>
    <string name="distance">Distance:</string>
    <string name="gps">GPS</string>
    <string name="filtered">Filtered</string>
    <string name="filtered_geo">Filtered+Geo</string>
    <!-- Preferences -->
    <string name="settings">Settings</string>
    <string name="pref_gps_min_time">GPS Min Time</string>
    <string name="pref_gps_min_time_summ">Minimum time interval between location updates, in milliseconds</string>
    <string name="pref_gps_min_distance">GPS Min Distance</string>
    <string name="pref_gps_min_distance_summ">Minimum distance between location updates, in meters</string>
    <string name="pref_position_min_time">Position Min Time</string>
    <string name="pref_position_min_time_summ">Minimum time interval between each estimate position calculation, in milliseconds</string>
    <string name="pref_sensor_frequency">Sensor frequency (Hz)</string>
    <string name="pref_sensor_frequency_summ">The rate sensor events are delivered at, in Hertz</string>
    <string name="pref_geohash_precision">GeoHash Precision</string>
    <string name="pref_geohash_precision_summ">The length of geohash string (and precision)</string>
    <string name="pref_geohash_min_point">GeoHash min point</string>
    <string name="pref_geohash_min_point_summ">Count of points with same geohash. GPS point becomes valid only when count greater then this value.</string>

    <string name="pref_server" translatable="false">Log storage server</string>
    <string name="pref_server_summ" translatable="false">IP:port or name:port for log storage server. Will be send data from sensor in realtime. I hope :)</string>

    <string name="pref_chunk" translatable="false">Size of max chank send data</string>
    <string name="pref_chunk_summ" translatable="false">Max size of log records when will be send to server. Need to decrease load to server and application</string>

    <string name="gps_provider" translatable="false">GPS </string>
    <string name="fused_provider" translatable="false">Fused</string>
    <string name="location_provider" translatable="false">Location provider</string>
</resources>
