<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lezh1k.sensordatacollector.MainActivity">

    <LinearLayout
        android:layout_weight="0.5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_weight="2"
            android:id="@+id/tvStatus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/status" />

        <com.mapbox.mapboxsdk.maps.MapView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:mapbox="http://schemas.android.com/apk/res-auto"
            android:layout_weight="1"
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            mapbox:mapbox_cameraTargetLat="42.876583"
            mapbox:mapbox_cameraTargetLng="74.588290"
            mapbox:mapbox_cameraZoom="16"
            mapbox:mapbox_cameraZoomMax="19"
            mapbox:mapbox_cameraZoomMin="8" />

        <TextView
            android:id="@+id/tvDistance"
            android:layout_weight="1.6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/distance" />

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1.4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cbGPS"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:buttonTint="@color/black"
            android:checked="true"
            android:text="@string/gps"
            android:textColorLink="@color/black" />

        <CheckBox
            android:id="@+id/cbFilteredKalman"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:buttonTint="@color/black"
            android:checked="true"
            android:text="@string/filtered"
            android:textColorLink="@color/black" />

        <CheckBox
            android:id="@+id/cbFilteredKalmanGeo"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:buttonTint="@color/black"
            android:checked="true"
            android:text="@string/filtered_geo"
            android:textColorLink="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1.2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:layout_weight="1"
            android:id="@+id/btnStartStop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="btnStartStop_click"
            android:text="@string/start_tracking" />

        <Space
            android:layout_weight="1.7"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <Button
            android:layout_weight="1"
            android:id="@+id/btnCalibrate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="btnCalibrate_click"
            android:text="@string/calibrate"
            android:visibility="visible" />
    </LinearLayout>


</LinearLayout>
